--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -24,7 +24,7 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  # CONFIG_FILE: .config
+  CONFIG_FILE: .config
   # DIY_SH: diy.sh
   SSH_ACTIONS: true
   UPLOAD_BIN_DIR: false
@@ -61,8 +61,8 @@ jobs:
 
     - name: Load custom configuration
       run: |
-        # [ -e files ] && mv files openwrt/files
-        # [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
+        [ -e files ] && mv files openwrt/files
+        [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         # chmod +x $DIY_SH
         cd openwrt
         sed -i 's/192.168.1.1/192.168.5.169/g' package/base-files/files/bin/config_generate
