--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -65,7 +65,8 @@ jobs:
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         # chmod +x $DIY_SH
         cd openwrt
-        sed -i 's/192.168.1.1/192.168.5.169/g' package/base-files/files/bin/config_generate
+        sed -i 's/192.168.1.1/192.168.5.161/g' package/base-files/files/bin/config_generate
+        sed -i "/CYXluq4wUazHjmCDBCqXF/d" package/lean/default-settings/files/zzz-default-settings
     - name: SSH connection to Actions
       uses: P3TERX/debugger-action@master
       if: env.SSH_ACTIONS == 'true'
